Ignore sddmtheme dependencies if we do not have the knsrc file installed

Otherwise, global themes that have this dependency can not be installed where the SDDM-KCM is not installed.

BUG: 415583